c4prj2_input/grade.txt
Grading at Sat Aug  3 07:14:55 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:10:10: error: implicit declaration of function ‘isspace’ [-Werror=implicit-function-declaration]
       if(isspace(str[i])) { 
          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
